samples/_failures_safe/1761286741_8b8880_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da1d4749.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_da1d4749.c:147:5: error: expected expression at end of input
  147 |     if (
      |     ^~
./samples/SAFE/__tmp_da1d4749.c:147:5: error: expected declaration or statement at end of input
